[package]
name = "chromaprint"
version = "0.2.0"
edition = "2024"
authors = ["James Hurst <james@jameshurst.ca>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jameshurst/rust-chromaprint"
repository = "https://github.com/jameshurst/rust-chromaprint"
documentation = "https://jameshurst.github.io/rust-chromaprint"
description = "Bindings to Chromaprint"

[dependencies]
libc = "0.2"
