[package]
name = "chromaprint"
version = "0.2.1"
edition = "2024"
authors = ["Matt Silverwood <matt@silverwood.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mattsilverwood/rust-chromaprint"
repository = "https://github.com/mattsilverwood/rust-chromaprint"
description = "Bindings to Chromaprint"

[dependencies]
libc = "0.2"
